@@ -45,11 +45,12 @@ See also: HTML Functions, PUEBLO, html()
   pueblo(<player|descriptor>)
   
   This function returns 1 if the given player or descriptor is currently 
-  Pueblo-enabled, and 0 otherwise. See_All objects can check the Pueblo
-  status of any connection; mortals can only use it on their own connections.
+  Pueblo-enabled, and 0 otherwise. 
   
-  If used on a player/descriptor which is not connected, or which you don't
-  have permission to check, pueblo() returns #-1 NOT CONNECTED.
+  If used on a player/descriptor which is not connected, pueblo() returns 
+  #-1 NOT CONNECTED. Mortals can only give a <descriptor> for their own
+  connections (but can give any <player> arg), while See_All objects can
+  check any descriptor.
   
   When used with a <player> argument, the most recently active connection is
   used if the <player> is logged in more than once.
